[package]
name = "feeder"
version = "0.1.0"
authors = ["rot1024 <aayhrot@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.1"


[lib]
name = "feeder"

[[bin]]
name = "feeder"
path = "src/main.rs"
