[package]
name = "feeder"
version = "0.1.0"
authors = ["rot1024 <aayhrot@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "2.0.0", features = ["openssl"] }
actix-rt = "1.1.1"
envy = "0.4.1"
serde = "1.0.112"
env_logger = "0.7.1"
async-trait = "0.1.35"
chrono = { version = "0.4.11", features = ["serde"] }
atom_syndication = { version = "0.9.0", features = ["with-serde"] }
lazy_static = "1.4.0"


[lib]
name = "feeder"

[[bin]]
name = "feeder"
path = "src/main.rs"
